# learn_python

./: pyproject.toml
src/learn_pyhton/: 17_Projet énoncé.ipynb  notebook.ipynb  notebook_python2.ipynb
src/learn_pyhton/dossier_textes/: texte0.txt  texte1.txt  texte2.txt
src/learn_pyhton/fichiers_projet/: individus.json  individus_complets.csv  individus_par_pays_F_r_a_n_c_e.json  individus_par_pays_P_o_r_t_u_g_a_l.json  individus_with_imc.json  individus_with_pays.json  individus_with_taille.json  random_individus.json  stats_ages.json  stats_imc.json
