[project]
name = "learn-pyhton"
version = "0.1.0"
description = ""
authors = [
    {name = "TchappiR",email = "tchappiromaric@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "learn_pyhton", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
